--- a/NZWalks.API/NZWalks.API/appsettings.json
+++ b/NZWalks.API/NZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks": "server=localhost;database=NZWalks;Trusted_Connection=true; encrypt=false"
+  }
 }
